@@ -13,7 +13,6 @@ import lombok.Data;
 import lombok.experimental.FieldDefaults;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Data
 @FieldDefaults(level = AccessLevel.PRIVATE)
@@ -65,6 +64,6 @@ public class YandexForecast implements WeatherInfo, ForecastInfo {
                         p.getHumidity(),
                         p.getPrecProb(),
                         p.getPrecMm()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
